1-x Correciones Desafio SASS II + SEO

--- a/SASS II + SEO/index.html
+++ b/SASS II + SEO/index.html
@@ -46,7 +46,7 @@
 	</nav>
 	<!--HEADER-->
 	<header class="textCenter">
-		<h1><div class="hTransform">Life Colors</div></h1>
+		<h1 class="hTransform">Life Colors</h1>
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -71,11 +71,11 @@
 	</header>
 	<!--MAIN-->	
 	<main class="textCenter">	
-		<h1 class="hTransform">Pinturas, Aerosoles y Accesorios</h1>
+		<h2 class="hTransform">Pinturas, Aerosoles y Accesorios</h2>
 		<a href="pages/productos.html" class="text1 ver">Ver nuestros Productos</a>
 		<section class="flexDiv">
 			<div class="sectionDiv1">	
-				<h2 class="hTransform">Contactanos</h2>
+				<h3 class="hTransform">Contactanos</h3>
 				<form action="archivo.php" class="text2 flexForm">	
 					<label for="name">Nombre y Apellido</label>
 					<input type="text" id="name">					
