--- a/SASS II + SEO/pages/nosotros.html
+++ b/SASS II + SEO/pages/nosotros.html
@@ -46,7 +46,7 @@
 	</nav>
 	<!--HEADER-->
 	<header class="textCenter">
-		<h1><div class="hTransform">Life Colors</div></h1>		
+		<h1 class="hTransform">Life Colors</h1>		
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -71,12 +71,12 @@
 	</header>
 	<!--MAIN-->		
 	<main class="textCenter"> 
-		<h1>Sobre nosotros</h1>
+		<h2>Sobre nosotros</h2>
 		<p class="pNosotros">Lorem ipsum, dolor sit amet consectetur adipisicing, elit. Libero, molestias, repellendus. Tenetur sequi doloremque distinctio quisquam minima aut tempora eius nostrum, nesciunt aperiam quaerat. Atque odio, minus qui minima quae?</p>
 		<p class="pNosotros">Excepturi ipsam quibusdam autem! Fuga eveniet sapiente totam iste, vitae est neque harum! Nemo nisi asperiores nulla ad aliquam dicta distinctio illo, repellat blanditiis perferendis vitae non et doloremque, praesentium.
 		Nostrum, modi, autem? Et atque nisi eum natus dicta aspernatur ratione, impedit similique voluptates necessitatibus, nihil dolores rerum quos ab repudiandae, esse rem magnam. Nam non ex aperiam consequuntur porro.</p>
 
-		<h2>Nuestro negocio</h2>
+		<h3>Nuestro negocio</h3>
 		<img src="../img/shop_inside.jpg" alt="Local por dentro" class="imageNosotros">
 		<p class="bottomFoto">(Foto de uno de los varios locales que poseemos)</p>
 	</main>
