--- a/SASS II + SEO/pages/productos.html
+++ b/SASS II + SEO/pages/productos.html
@@ -46,7 +46,7 @@
 	</nav>
 	<!--HEADER-->
 	<header class="textCenter">
-		<h1><div class="hTransform">Life Colors</div></h1>		
+		<h1 class="hTransform">Life Colors</h1>		
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -71,7 +71,7 @@
 	</header>
 	<!--MAIN-->
 	<main  class="textCenter">
-		<h1>Productos</h1>
+		<h2>Productos</h2>
 		<table border="3px" cellpadding="10px" cellspacing="4px" class="table1">
 			<tr>
 				<th>Articulo</th>
