--- a/SASS II + SEO/pages/promociones_bancarias.html
+++ b/SASS II + SEO/pages/promociones_bancarias.html
@@ -46,7 +46,7 @@
 	</nav>
 	<!--HEADER-->
 	<header class="textCenter">
-		<h1><div class="hTransform">Life Colors</div></h1>		
+		<h1 class="hTransform">Life Colors</h1>		
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
