--- a/SASS II + SEO/pages/tu_color.html
+++ b/SASS II + SEO/pages/tu_color.html
@@ -46,7 +46,7 @@
 	</nav>
 	<!--HEADER-->
 	<header class="textCenter">
-		<h1><div class="hTransform">Life Colors</div></h1>		
+		<h1 class="hTransform">Life Colors</h1>		
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
@@ -71,7 +71,7 @@
 	</header>
 	<!--MAIN-->	
 	<main class="textCenter">
-		<h2><div class="hTransform">Nuestros colores mas destacados</div></h2>
+		<h2 class="hTransform">Nuestros colores mas destacados</h2>
 		<div class="container">
 			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2 row-cols-xl-4">
 				<div class="col">
